makes status bar white and also makes login buttons have radius corner of value 4

--- a/pratica_programacion_ios/pratica_programacion_ios/Base.lproj/Main.storyboard
+++ b/pratica_programacion_ios/pratica_programacion_ios/Base.lproj/Main.storyboard
@@ -68,6 +68,11 @@
                                         <state key="normal" title="Sign In">
                                             <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W1b-7E-17R" userLabel="Sign Up">
                                         <rect key="frame" x="0.0" y="286" width="355" height="45"/>
@@ -78,6 +83,11 @@
                                         <state key="normal" title="Sign Up">
                                             <color key="titleColor" red="0.29803921568627451" green="0.90196078431372551" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="4"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </button>
                                 </subviews>
                                 <constraints>
